[metadata]
name = anopp2
version = 0.1
summary = 
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.7
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

[easy_install]
find-links = http://openmdao.org/dists

